tests/ui/consts/error-is-freeze.stderr
error[E0412]: cannot find type `UndefinedType` in this scope
  --> $DIR/error-is-freeze.rs:4:17
   |
LL |     foo: Option<UndefinedType>,
   |                 ^^^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | struct MyStruct<UndefinedType> {
   |                +++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
